# webx-engine

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  History.md  LICENSE  README.md  Vagrantfile  run_wm.sh  tmp.txt
.devcontainer/multiuser/: Dockerfile  devcontainer.json  install.sh
.devcontainer/standalone/: devcontainer.json
.github/workflows/: build-and-publish-deb.yml
docker/: Dockerfile  Dockerfile.debian  Dockerfile.ubuntu
lib/crc32/: Crc32.h
src/: main.cpp  version.h
src/client/: WebXClient.cpp  WebXClient.h  WebXClientGroup.cpp  WebXClientGroup.h  WebXClientRegistry.cpp  WebXClientRegistry.h  WebXClientWindow.h  WebXWindowQualityHandler.cpp  WebXWindowQualityHandler.h
src/clipboard/: WebXClipboard.cpp  WebXClipboard.h
src/connector/: WebXClientCollector.cpp  WebXClientCollector.h  WebXClientCommandCollector.cpp  WebXClientCommandCollector.h  WebXClientConnector.cpp  WebXClientConnector.h  WebXClientMessagePublisher.cpp  WebXClientMessagePublisher.h  WebXClientPublisher.cpp  WebXClientPublisher.h  WebXClientRequest.h  WebXKeyboardConnection.cpp  WebXKeyboardConnection.h  WebXMessage.h  WebXZMQ.h
src/connector/command/: WebXCommand.h
src/connector/instruction/: WebXConnectInstruction.h  WebXCursorImageInstruction.h  WebXCursorInstruction.h  WebXImageInstruction.h  WebXInstruction.cpp  WebXInstruction.h  WebXKeyboardInstruction.h  WebXMouseInstruction.h  WebXScreenInstruction.h  WebXWindowsInstruction.h
src/connector/message/: WebXConnectionMessage.h  WebXCursorImageMessage.h  WebXImageMessage.cpp  WebXImageMessage.h  WebXMessage.h  WebXMouseCursorMessage.h  WebXMouseMessage.h  WebXScreenMessage.h  WebXSubImagesMessage.cpp  WebXSubImagesMessage.h  WebXVoidMessage.h  WebXWindowsMessage.h
src/connector/request/: WebXClientRequest.cpp  WebXClientRequest.h
src/connector/response/: WebXClientConnectorResponse.h  WebXConnectionResponse.h  WebXImageResponse.cpp  WebXImageResponse.h  WebXResponse.h  WebXWindowsResponse.cpp  WebXWindowsResponse.h
src/connector/serializer/: WebXBinarySerializer.cpp  WebXBinarySerializer.h  WebXInstructionDecoder.cpp  WebXInstructionDecoder.h  WebXJsonSerializer.cpp  WebXJsonSerializer.h  WebXMessageEncoder.cpp  WebXMessageEncoder.h  WebXSerializer.h
src/controller/: WebXConnection.h  WebXController.cpp  WebXController.h  WebXKeyboardConnection.cpp  WebXStats.cpp  WebXStats.h
src/controller/client/: WebXClient.h  WebXClientBitrateCalculator.h  WebXClientGroup.cpp  WebXClientGroup.h  WebXClientRegistry.cpp  WebXClientRegistry.h  WebXClientWindow.h  WebXWindowQualityHandler.cpp  (+1 more)
src/display/: WebXClipboard.h  WebXConnection.h  WebXController.cpp  WebXController.h  WebXDisplay.cpp  WebXDisplay.h  WebXDisplayEventType.h  WebXErrorHandler.cpp  WebXErrorHandler.h  WebXManager.cpp  WebXManager.h  WebXRandR.cpp  WebXRandR.h  WebXWindow.cpp  WebXWindow.h  WebXWindowDamageProperties.h  WebXWindowImageUtils.h  WebXWindowProperties.h  WebXWindowQualityHandler.cpp  WebXWindowQualityHandler.h  WebXWindowShape.cpp  WebXWindowShape.h
src/events/: WebXDamageOverride.cpp  WebXDamageOverride.h  WebXEvent.cpp  WebXEvent.h  WebXEventListener.cpp  WebXEventListener.h
src/gateway/: WebXGateway.h
src/image/: WebXCombinedImageConverter.cpp  WebXCombinedImageConverter.h  WebXImage.cpp  WebXImage.h  WebXImageAlphaConverter.cpp  WebXImageAlphaConverter.h  WebXImageAlphaUtils.cpp  WebXImageAlphaUtils.h  WebXImageConverter.h  WebXJPGImage.cpp  WebXJPGImage.h  WebXJPGImageConverter.cpp  WebXJPGImageConverter.h  WebXJXLImageConverter.cpp  WebXJXLImageConverter.h  WebXPNGImage.cpp  WebXPNGImage.h  WebXPNGImageConverter.cpp  WebXPNGImageConverter.h  WebXSubImage.h  WebXWebPImageConverter.cpp  WebXWebPImageConverter.h
src/input/: WebXInput.cpp  WebXInput.h  WebXKB.cpp  WebXKB.h  WebXKeyboard.cpp  WebXKeyboard.h  WebXKeyboardMapping.h  WebXKeyboardSymbolMapping.h  WebXKeysym.h  WebXKeysymMapping.h  WebXMouse.cpp  WebXMouse.h  WebXMouseState.cpp  WebXMouseState.h
src/instruction/: WebXImageInstruction.h  WebXInstruction.h  WebXKeyboardInstruction.h  WebXMouseInstruction.h  WebXPongInstruction.h  WebXQualityInstruction.h  WebXWindowsInstruction.h
src/message/: WebXCursorImageMessage.h  WebXImageMessage.h  WebXMessage.h  WebXPingMessage.h  WebXScreenMessage.h  WebXSubImagesMessage.h  WebXWindowsMessage.h
src/models/: WebXDataRate.h  WebXPosition.h  WebXQuality.cpp  WebXQuality.h  WebXRectangle.h  WebXSettings.h  WebXSize.h  WebXTransferData.h  WebXVersion.h  WebXWindowCoverage.h  WebXWindowDamage.h  WebXWindowImageTransferData.h  WebXWindowVisibility.h
src/serializer/: WebXBinarySerializer.cpp  WebXBinarySerializer.h  WebXInstructionDecoder.cpp  WebXInstructionDecoder.h  WebXMessageEncoder.cpp  WebXMessageEncoder.h
src/transport/: WebXClientCommandCollector.cpp  WebXClientCommandCollector.h  WebXClientConnector.cpp  WebXClientConnector.h  WebXClientInstructionSubscriber.cpp  WebXClientInstructionSubscriber.h  WebXClientMessagePublisher.cpp  WebXClientMessagePublisher.h  WebXTransport.cpp  WebXTransport.h  WebXZMQ.h
src/utils/: WebXBinaryBuffer.cpp  WebXBinaryBuffer.h  WebXDataBuffer.cpp  WebXDataBuffer.h  WebXDataBufferPool.h  WebXHexUtils.h  WebXImageUtils.h  WebXObjectPool.h  WebXOptional.h  WebXPosition.h  WebXQuality.cpp  WebXQuality.h  WebXQualityHelper.h  WebXQueue.h  WebXRectangle.h  WebXResult.h  WebXSettings.h  WebXSize.h  WebXStringUtils.h  WebXWindowImageUtils.h
test/: metrics.sh  testAlpha.cpp  testAlphaCheck.cpp  testAlphaCreate.cpp  testCursorImageEncoder.cpp  testDamage.cpp  testImageCompare.cpp  testImageEncoder.cpp  testKeyboard.cpp  testMouse.cpp  testPush.cpp  testPushPull.cpp  testShape.cpp  testSquish.cpp
test/output/: screenshotOut.jxl
utils/guacd-kbd-translator/: index.js  interpreter.js  keycodes.js  package.json  parser.js  test.h  translator.js
utils/xkb/: index.js  package.json  parser.js  translator.js
utils/xkb-interpreter/: index.js  interpreter.js  package.json  parser.js  translator.js  writer.js
vagrant-files/: guacd.conf  install-guacamole.sh  install-xrdp.sh
(+91 files in other folders)
